--- a/Project.toml
+++ b/Project.toml
@@ -3,5 +3,12 @@ uuid = "71058383-8132-461f-b29a-bb8012bb1004"
 authors = ["Tamás Cserteg <csertegt@gmail.com> and contributors"]
 version = "1.0.0-DEV"
 
+[deps]
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+OpenAPI = "d5e62ea6-ddf3-4d43-8e4c-ad5e6c8bfd7d"
+TimeZones = "f269a46b-ccf7-5d73-abea-4c690281aa53"
+
 [compat]
 julia = "1.6.7"
+OpenAPI = "0.1"
+TimeZones = "1.0"
